--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -88,7 +88,7 @@
 
 
 <div class="sidebar">
-<img src="images/logo.png" width="136" height="136" alt="">
+<img src="images/sympy-100px.png" width="100" height="84" alt="">
 
 <h2>Subscriptions</h2>
 <ul>
