--- a/theme/index.html.tmpl
+++ b/theme/index.html.tmpl
@@ -111,13 +111,9 @@ Powered by:<br>
 <p>
 <h2>Planetarium:</h2>
 <ul>
-<li><a href="http://www.planetapache.org/">Planet Apache</a></li>
-<li><a href="http://planet.debian.net/">Planet Debian</a></li>
-<li><a href="http://planet.freedesktop.org/">Planet freedesktop.org</a></li>
-<li><a href="http://planet.gnome.org/">Planet GNOME</a></li>
-<li><a href="http://planetsun.org/">Planet Sun</a></li>
-<li><a href="http://fedora.linux.duke.edu/fedorapeople/">Fedora People</a></li>
-<li><a href="http://www.planetplanet.org/">more...</a></li>
+<li><a href="http://planet.scipy.org/">Planet SciPy</a></li>
+<li><a href="http://planet.python.org/">Planet Python</a></li>
+<li><a href="http://planet.sagemath.org/">Planet Sage</a></li>
 </ul>
 </p>
 </div>
